--- a/Models/-VC/2025.06.10_Pureformer-VC.md
+++ b/Models/-VC/2025.06.10_Pureformer-VC.md
@@ -511,4 +511,39 @@ For evaluation, 10 source/target speech pairs are fed into each VC model under t
 
 After this, 5 participants are invited to rate the speech samples.
 
+### Experimental Results
+
+Table [table:1](#table:1) and [table:2](#table:2) present a comparative analysis of the Pureformer-VC against baseline methods in both many-to-many and one-shot VC settings across both datasets. 
+
+**MCD and MOS metrics.**
+
+The MOS and MCD can evaluate the effectiveness of speech reconstruction, collectively referred to as reconstruction metrics.
+
+Since the original sampling rate of the AISHELL-3 dataset is higher than that of the VCTK dataset, the quality of speech reconstruction is superior, resulting in better reconstruction metrics for the AISHELL-3 dataset.
+
+The Pureformer-VC outperforms the encoder-decoder baseline models in both many-to-many and one-shot experimental configurations with respect to reconstruction metrics.
+
+However, when compared to state-of-the-art methods like RVC and GPT-SoVITS, the Pureformer-VC still exhibits a slight performance gap.
+
+These results showcase the effectiveness of the pure transformer architecture.
+
+**VSS metric.**
+
+The VSS evaluation measures the similarity between the generated target timbre and the actual target timbre using a resemblyzer.
+
+Compared to the four classic encoder-decoder-based VC baselines, the Pureformer-VC surpasses them in the VSS metric.
+
+However, a slight gap remains in the VSS performance between PVC and the state-of-the-art models RVC and GPT-SoVITS.
+
+As shown in the results, we further investigated the impact of removing either the AAMSoftmax loss or the triplet loss from the training objectives to assess the model's ability to represent timbre in the embedded vectors during training.
+
+It is evident that without these two losses, the proposed model's VSS stays relatively consistent with that of the baseline model.
+
+Therefore, incorporating these losses helps enhance the model's VC expressiveness. 
+
+![](figs/tsne.pdf)
+
+<a id='fig:4'>The visualization of speaker representations extracted from 6 unseen
+speakers’ utterances.</a>
+
 #
