--- a/Models/-VC/2025.06.10_Pureformer-VC.md
+++ b/Models/-VC/2025.06.10_Pureformer-VC.md
@@ -570,4 +570,13 @@ The AAM-softmax loss has a significant impact on the clustering of speaker embed
 
 <a id=table:3>Fake Detection score comparison for ablation study ablation</a>
 
-#
+### Cross-lingual VC
+
+Pureformer VC is also capable of performing cross-lingual voice conversion (CVC), where the source and target utterances are in different languages.
+
+We trained Pureformer-VC on a mixture of the AISHELL-3 and VCTK datasets.
+
+Due to varying pronunciation habits, the reconstruction metrics ($MOS=3.15, MCD=5.12$) and VSS ($2.95$) scores for cross-lingual voice conversion are lower than those for monolingual VC experiments.
+
+The bilingual timbre experiments suggest that additional latent variables may be necessary to decouple the languages using special encoders for improved conversion performance.
+
