--- a/Models/-VC/2025.06.10_Pureformer-VC.md
+++ b/Models/-VC/2025.06.10_Pureformer-VC.md
@@ -596,3 +596,46 @@ In conclusion, the Pureformer-VC model, fortified by the strategic application o
 \bibliography{template}
 \end{document}
 
+## References
+
+[^Toda2007Voice]: Voice Conversion Based on Maximum-Likelihood Estimation of Spectral Parameter Trajectory. IEEE Transactions on Audio, Speech, and Language Processing 2007.
+[^Helander2010Voice]: Voice Conversion Using Partial Least Squares Regression. IEEE Transactions on Audio, Speech, and Language Processing 2010.
+[^Wu2020One-Shot]: One-Shot Voice Conversion by Vector Quantization. ICASSP 2020-2020 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2020.
+[^Erro2009Voice]: Voice Conversion Based on Weighted Frequency Warping. IEEE Transactions on Audio, Speech, and Language Processing 2009.
+[^Aihara2014Exemplar-Based]: Exemplar-Based Emotional Voice Conversion Using Non-Negative Matrix Factorization. Signal and Information Processing Association Annual Summit and Conference (APSIPA), 2014 Asia-Pacific 2014.
+[^Kaneko2020Cyclegan-Vc3]: Cyclegan-Vc3: Examining and Improving Cyclegan-VCS for Mel-Spectrogram Conversion. arXiv:2010.11672.
+[^Kaneko2021Maskcyclegan-Vc]: Maskcyclegan-Vc: Learning Non-Parallel Voice Conversion With Filling in Frames. ICASSP 2021-2021 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2021.
+[^Kameoka2018Stargan-Vc]: Stargan-Vc: Non-Parallel Many-to-Many Voice Conversion Using Star Generative Adversarial Networks. 2018 IEEE Spoken Language Technology Workshop (SLT) 2018.
+[^Kaneko2019Stargan-Vc2]: Stargan-Vc2: Rethinking Conditional Methods for Stargan-Based Voice Conversion. arXiv:1907.12279.
+[^Li2021Starganv2-Vc]: Starganv2-Vc: A Diverse, Unsupervised, Non-Parallel Framework for Natural-Sounding Voice Conversion. arXiv:2107.10394.
+[^Chen2021Towards]: Towards Low-Resource Stargan Voice Conversion Using Weight Adaptive Instance Normalization. ICASSP 2021-2021 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2021.
+[^Huang2017Arbitrary]: Arbitrary Style Transfer in Real-Time With Adaptive Instance Normalization. Proceedings of the IEEE International Conference on Computer Vision 2017.
+[^Karras2020Analyzing]: Analyzing and Improving the Image Quality of Stylegan. Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition 2020.
+[^Van2022Comparison]: A Comparison of Discrete and Soft Speech Units for Improved Voice Conversion. ICASSP 2022-2022 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2022.
+[^Casanova2022Yourtts]: Yourtts: Towards Zero-Shot Multi-Speaker TTS and Zero-Shot Voice Conversion for Everyone. International Conference on Machine Learning 2022.
+[^Baas2023Voice]: Voice Conversion With Just Nearest Neighbors. arXiv:2305.18975.
+[^Qian2020Unsupervised]: Unsupervised Speech Decomposition via Triple Information Bottleneck. International Conference on Machine Learning 2020.
+[^Chan2022Speechsplit2.]: Speechsplit2. 0: Unsupervised Speech Disentanglement for Voice Conversion Without Tuning Autoencoder Bottlenecks. ICASSP 2022-2022 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2022.
+[^Chou2019One-Shot]: One-Shot Voice Conversion by Separating Speaker and Content Representations With Instance Normalization. arXiv:1904.05742.
+[^Qian2019Autovc]: Autovc: Zero-Shot Voice Style Transfer With Only Autoencoder Loss. International Conference on Machine Learning 2019.
+[^Gulati2020Conformer]: Conformer: Convolution-Augmented Transformer for Speech Recognition. arXiv:2005.08100.
+[^Gao2022Paraformer]: Paraformer: Fast and Accurate Parallel Transformer for Non-Autoregressive End-to-End Speech Recognition. arXiv:2206.08317.
+[^Yao2023Zipformer]: Zipformer: A Faster and Better Encoder for Automatic Speech Recognition. arXiv:2310.11230.
+[^An2024Paraformer-V2]: Paraformer-V2: An Improved Non-Autoregressive Transformer for Noise-Robust Speech Recognition. arXiv:2409.17746.
+[^Zhang2022Mfa-Conformer]: Mfa-Conformer: Multi-Scale Feature Aggregation Conformer for Automatic Speaker Verification. arXiv:2203.15249.
+[^Liu2022Mfa]: MFA: TDNN With Multi-Scale Frequency-Channel Attention for Text-Independent Speaker Verification With Short Utterances. ICASSP 2022-2022 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2022.
+[^Kim2021SE-Conformer]: SE-Conformer: Time-Domain Speech Enhancement Using Conformer.. Interspeech 2021.
+[^Abdulatif2024Cmgan]: Cmgan: Conformer-Based Metric-Gan for Monaural Speech Enhancement. IEEE/ACM Transactions on Audio, Speech, and Language Processing 2024.
+[^Hermans2017In]: In Defense of the Triplet Loss for Person Re-Identification. arXiv:1703.07737.
+[^Li2024Main-Vc]: MAIN-VC: Lightweight Speech Representation Disentanglement for One-Shot Voice Conversion. arXiv:2405.00930.
+[^Shao2025kNN-SVC]: kNN-SVC: Robust Zero-Shot Singing Voice Conversion With Additive Synthesis and Concatenation Smoothness Optimization. ICASSP 2025-2025 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2025.
+[^Ke2022New]: A New Spoken Language Teaching Tech: Combining Multi-Attention and AdaIN for One-Shot Cross Language Voice Conversion. 2022 13th International Symposium on Chinese Spoken Language Processing (ISCSLP) 2022.
+[^Wu2021Styleformer]: Styleformer: Real-Time Arbitrary Style Transfer via Parametric Style Composition. Proceedings of the IEEE/CVF International Conference on Computer Vision 2021.
+[^Kong2020Hifi-Gan]: Hifi-Gan: Generative Adversarial Networks for Efficient and High Fidelity Speech Synthesis. Advances in Neural Information Processing Systems 2020.
+[^Zhu2020Batch]: A Batch Normalized Inference Network Keeps the KL Vanishing Away. arXiv:2004.12585.
+[^Salimans2016Weight]: Weight Normalization: A Simple Reparameterization to Accelerate Training of Deep Neural Networks. Advances in Neural Information Processing Systems 2016.
+[^Veaux2020VCTK]: VCTK Corpus: English Multi-Speaker Corpus for CSTR Voice Cloning. arXiv:2012.11929 [cs.Speech].
+[^Shi2020Aishell-3]: Aishell-3: A Multi-Speaker Mandarin TTS Corpus and the Baselines. arXiv:2010.11567.
+[^Kingma2014Adam]: Adam: A Method for Stochastic Optimization. arXiv:1412.6980.
+[^Wang2021Vqmivc]: Vqmivc: Vector Quantization and Mutual Information-Based Unsupervised Speech Representation Disentanglement for One-Shot Voice Conversion. arXiv:2106.10132.
+[^Desplanques2020Ecapa-Tdnn]: Ecapa-Tdnn: Emphasized Channel Attention, Propagation and Aggregation in TDNN Based Speaker Verification. arXiv:2005.07143.
